tests/fixtures/invalid/parenthesized_pointer_alignof_type.c
int main(void) {
    return _Alignof(int (*)[3]);
}
